[package]
name = "r_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] } 
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.9"
bitflags = "2.4.1"
xmas-elf = "0.9.1"
